<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso Desejado</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="selecione_um_curso">Selecione um curso:</string>
</resources>