<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome" />

    <EditText
        android:id="@+id/editNomeCurso"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:width="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome_do_curso"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSobrenome" />

    <EditText
        android:id="@+id/editTelefoneContato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_contato"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeCurso" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:text="@string/txt_button_limpar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeCurso"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/black"
        android:text="@string/txt_button_salvar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"
        app:layout_constraintTop_toBottomOf="@+id/editNomeCurso"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="384dp"
        android:layout_height="58dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="148dp"
        android:backgroundTint="@color/black"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefoneContato"
        app:layout_constraintVertical_bias="0.465" />

</androidx.constraintlayout.widget.ConstraintLayout>