<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp" />


    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAlignment="viewStart"
        android:textColorHint="@color/btgTxt" />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="textPersonName"
        android:paddingStart="40px"
        android:textAlignment="viewStart"
        android:textColorHint="@color/btgTxt" />


    <EditText
        android:id="@+id/editTelefoneContato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_contato"
        android:inputType="textPersonName"
        android:paddingStart="40px"
        android:textAlignment="viewStart"
        android:textColor="@color/btgTxt"
        android:textColorHint="@color/btgTxt" />


    <TextView
        android:id="@+id/txtListaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/selecione_um_curso"
        android:textColor="@color/btgTxt"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_spinner" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="125dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:hint="@string/txt_button_limpar"
            android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="125dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/txt_button_salvar"
                android:password="false"
                android:textColorHint="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:hint="@string/txt_button_finalizar"
        android:textColorHint="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>